--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Kaisam</a>.
+    Coded by <a href="https://github.com/kaisam11">Kaisam</a>.
   </div>
 
   <script type="text/javascript" src="./app/app/js/script.js">
