--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="overlay faded"></div>
 
-    <nav class="container--pall flex flex-jc-sb flex-ai-c">
+    <nav class="container container--pall flex flex-jc-sb flex-ai-c">
       <a href="/" class="header__logo">
         <img src="./images/logo.svg" class="header__logo" alt="EasyBank">
       </a>
